# Hailer

./: .gitignore  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  configure  configure.ac  hailer.pc.in
src/: Makefile.am  Makefile.in  hailer.c  hailer_cli.c  hailer_peer_discovery.c  hailer_server.c
src/include/: config.h  config.h.in  hailer.h  hailer_app_id.h  hailer_msgtype.h  hailer_peer_discovery.h  hailer_server.h
test-app/: Makefile.am  Makefile.in  test_app_a  test_app_a.c  test_app_b  test_app_b.c  test_hailer.sh
